--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,6 @@ dependencies:
   cupertino_icons: ^0.1.2
   toast: ^0.1.4
   flushbar: ^1.10.2
-  carousel_slider: ^4.0.0-nullsafety.0
-  splashscreen: ^1.3.5
-  page_view_indicator: ^2.0.4
-  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -47,10 +43,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-   - assets/i1.png
-   - assets/i2.jpg
-   - assets/i3.jpg
+  # assets:
+  #  - images/a_dot_burr.jpeg
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
